--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 5 </ head >
 6 <body >
 7 <h1 > Hello Web Tech I'm Shane Anderson </ h1 >
+    <p>Welcome to the web of fun</p>
 8 </ body >
 9 </ html >
