--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 1 <! DOCTYPE html >
 2 <html >
-3 <head >
-4 < title > SET08101 - Web Tech - Shane Anderson </ title >
-5 </ head >
+3 <head 
+4  title > SET08101 - Web Tech - Shane Anderson < title 
+5 </ head 
 6 <body >
-7 <h1 > Hello Web Tech I'm Shane Anderson </ h1 >
-    <p>Welcome to the web of fun</p>
+7 <h1 > Hello Web Tech I'm Shane Anderson </ h1 
+    <p>Welcome to the web of fun<p
 8 </ body >
 9 </ html >
