--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
 6 <body>
 7 <h1> Hello Web Tech I'm Shane Anderson </h1> 
     <p>Welcome to the web of fun</p>
+    <h2>Well H2 is smaller</h2> 
+    <h3>H3 is even smaller</h3>
+    <h6>H6 is teeny tiny</h6>
+
 8 </body>
 9 </html>
