--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h2>Well H2 is smaller</h2> 
     <h3>H3 is even smaller</h3>
     <h6>H6 is teeny tiny</h6>
-
+    <img src ="Images/vmask.jpg"/>
     <h4>Lets have some fun?</h4>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
