--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h6>H6 is teeny tiny</h6>
     <img src ="Images/vmask.jpg"/>
     <h4>Lets have some fun?</h4>
-    <a href ="https://www.tesla.com/"> Tesla </a >
+    <a href ="https://www.tesla.com/"> Tesla </a > <br>
       <a href ="https://clay.global/"> ClayGlobal </a >
         <a href ="https://www.rolex.com/"> Rolex  </a >
           <a href ="https://www.w3schools.com/"> W3Schools </a >
