--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
     <h2>Well H2 is smaller</h2> 
     <h3>H3 is even smaller</h3>
     <h6>H6 is teeny tiny</h6>
+    <h3><a href ="https://www.modules.napier.ac.uk/Module.aspx?ID=set08101"> Web Tech </a>is a module that is run in the <a href ="https://www.napier.ac.uk/about-us/our-schools/school-of-computing-engineering-and-the-built-environment"> School of Computer </a> at <a href ="https://www.napier.ac.uk/"> Edinburgh Napier University </a></h3>
     <img src ="Images/vmask.jpg"/>
     <h4>Lets have some fun?</h4>
-    <a href ="https://www.tesla.com/"> Tesla </a > <br>
-      <a href ="https://clay.global/"> ClayGlobal </a >
-        <a href ="https://www.rolex.com/"> Rolex  </a >
-          <a href ="https://www.w3schools.com/"> W3Schools </a >
-            <a href ="https://rapidapi.com/"> RapidAPI </a >
+    <a href ="https://www.tesla.com/"> Tesla </a> <br>
+      <a href ="https://clay.global/"> ClayGlobal </a>
+        <a href ="https://www.rolex.com/"> Rolex  </a>
+          <a href ="https://www.w3schools.com/"> W3Schools </a>
+            <a href ="https://rapidapi.com/"> RapidAPI </a>
     <table>
       <tr>
         <th>Shane</th>
