Lets have some fun no longer hyper text? Fixed error

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h6>H6 is teeny tiny</h6>
     <h3><a href ="https://www.modules.napier.ac.uk/Module.aspx?ID=set08101"> Web Tech </a>is a module that is run in the <a href ="https://www.napier.ac.uk/about-us/our-schools/school-of-computing-engineering-and-the-built-environment"> School of Computer </a> at <a href ="https://www.napier.ac.uk/"> Edinburgh Napier University </a></h3>
     <img src ="Images/vmask.jpg"/>
-    <a href="https://www.modules.napier.ac.uk/Module.aspx?ID=set08101"><img src="Images/vmask.jpg">
+    <a href="https://www.modules.napier.ac.uk/Module.aspx?ID=set08101"><img src="Images/vmask.jpg"/>
 
     <h4>Lets have some fun?</h4>
     <a href ="https://www.tesla.com/"> Tesla </a> <br>
