Adding home page button and other html pages for nav

--- a/03.html
+++ b/03.html
@@ -13,7 +13,8 @@
     </style> 
 5 </head> 
 6 <body>
-7 <h1> Hello Web Tech I'm Shane Anderson </h1> 
+  <a href="https://shaney94.github.io/Web-Tech-set08101-Shane-Anderson/"><img src="Images/home.jpg"></a>
+7<a href ="https://www.heurisco.io"> Shane Anderson </a>
     <p>Welcome to the web of fun</p>
     <h2>Well H2 is smaller</h2> 
     <h3>H3 is even smaller</h3>
