--- a/index.html
+++ b/index.html
@@ -19,15 +19,18 @@
     <h3>H3 is even smaller</h3>
     <h6>H6 is teeny tiny</h6>
     <h3><a href ="https://www.modules.napier.ac.uk/Module.aspx?ID=set08101"> Web Tech </a>is a module that is run in the <a href ="https://www.napier.ac.uk/about-us/our-schools/school-of-computing-engineering-and-the-built-environment"> School of Computer </a> at <a href ="https://www.napier.ac.uk/"> Edinburgh Napier University </a></h3>
-    <img src ="Images/vmask.jpg"/>
     <a href="https://www.modules.napier.ac.uk/Module.aspx?ID=set08101"><img src="Images/vmask.jpg"></a>
 
     <h4>Lets have some fun?</h4>
+
+    <a href ="02.html"> About Me </a>
+    <a href ="03.html"> CIA </a>
+
     <a href ="https://www.tesla.com/"> Tesla </a> <br>
-      <a href ="https://clay.global/"> ClayGlobal </a>
-        <a href ="https://www.rolex.com/"> Rolex  </a>
-          <a href ="https://www.w3schools.com/"> W3Schools </a>
-            <a href ="https://rapidapi.com/"> RapidAPI </a>
+      <a href ="https://clay.global/"> ClayGlobal </a> <br>
+        <a href ="https://www.rolex.com/"> Rolex  </a>  <br>
+          <a href ="https://www.w3schools.com/"> W3Schools </a> <br>
+            <a href ="https://rapidapi.com/"> RapidAPI </a> <br>
     <table>
       <tr>
         <th>Shane</th>
