Home page fixed on internal page

--- a/03.html
+++ b/03.html
@@ -13,7 +13,7 @@
     </style> 
 5 </head> 
 6 <body>
-  <a href="https://shaney94.github.io/Web-Tech-set08101-Shane-Anderson/"><img src="Images/home.jpg"></a>
+  <a href="https://shaney94.github.io/Web-Tech-set08101-Shane-Anderson/"><img src="Images/Home.jpg"></a>
 7<a href ="https://www.heurisco.io"> Shane Anderson </a>
     <p>Welcome to the web of fun</p>
     <h2>Well H2 is smaller</h2> 
